# Neuro-Agent

./: .gitignore  README.md  neuro-agent-backend.spec
.atl/: skill-registry.md
.engram/: config.json
backend/: .coverage  .env.example  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/agent/: __init__.py  agent.py  llm_provider.py  memory_provider.py  models.py  tool_registry.py
backend/src/agent/tools/: echo.py  file_ops.py
backend/src/memory/: __init__.py
backend/src/research/: export.py  rag.py  search.py  synthesis.py
backend/src/transcription/: provider.py
backend/tests/: test_agent.py  test_conversation.py  test_echo.py  test_file_ops.py  test_health.py  test_llm_provider.py  test_memory_provider.py  test_research_export.py  test_research_rag.py  test_research_search.py  test_research_synthesis.py  test_tool_registry.py  test_transcription.py  test_websocket.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/__tests__/: Sidebar.test.tsx  useBackend.test.tsx
frontend/src/components/: Chat.tsx  FileTree.tsx  NoteEditor.tsx  Settings.tsx  Sidebar.tsx  SlideEditor.tsx  SlideToolbar.tsx  Transcription.tsx
frontend/src/hooks/: useBackend.ts  useTheme.ts
frontend/src/workers/: marp.worker.ts
