[project]
name = "neuro-agent-backend"
version = "0.1.0"
description = "Backend sidecar for Neuro Agent — AI agent, memory, skills, SDD workflow, deep research, transcription"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "websockets>=14",
    "sqlalchemy>=2.0",
    "aiofiles>=24",
    "httpx>=0.28",
    "openai>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
